fix question popover on firefox

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -102,14 +102,14 @@ li .other_cities {
 }
 
 .question_label_icon_sm {
-  display: inline-block;
+  display: inherit;
   height: 20px;
   width: 20px;
   cursor: pointer;
 }
 
 .question_label_icon_md {
-  display: inline-block;
+  display: inherit;
   height: 25px;
   width: 25px;
   cursor: pointer;
